[package]
name = "midikitty"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["chsm", "annamontare"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rodio = "0.21.1"
midir = "0.10.1"

[dev-dependencies]
float-cmp = "0.10.0"
